--- a/ДЗ-40/index.html
+++ b/ДЗ-40/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Urok-40</title>
+    <title>ДЗ-40</title>
     <link href="fontawesome/css/all.css" rel="stylesheet">
     <link href="styles/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
