--- a/ДЗ-43/index.html
+++ b/ДЗ-43/index.html
@@ -178,7 +178,7 @@
     <main>
         <div class="container">
     <!---->
-              <button type="button" class="btn btn-secondary" id="btn1">меню1</button>
+              <button onclick="javascript:changeColor()" type="button" class="btn btn-secondary" id="btn1">меню1</button>
               <button type="button" class="btn btn-secondary" id="btn2">меню2</button>
               <button type="button" class="btn btn-secondary" id="btn3">меню3</button>
               <button type="button" class="btn btn-secondary" id="btn4">меню4</button>
